<resources>
    <string name="app_name">TWT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu1">My walks</string>
    <string name="menu2">Today</string>
    <string name="menu3">Coming soon</string>
    <string name="title_activity_coming_soon">ComingSoon</string>
    <string name="title_activity_walkof_day">WalkofDay</string>
    <string name="title_activity_missed_walks">MissedWalks</string>
    <string name="walk">Walk:</string>
    <string name="when">When:</string>
    <string name="time">Time:</string>
    <string name="venue">Venue:</string>
    <string name="kind">Kind:</string>
    <string name="guides">Guides:</string>
    <string name="description">Description:</string>
    <string name="map">Map</string>
    <string name="stations">Stations</string>
    <string name="title_activity_map">Map</string>
    <string name="refresh">Refresh</string>
    <string name="left_scroll_item1">Language</string>
    <string name="left_scroll_item2">Account</string>
    <string name="left_scroll_item3">Update Database</string>
    <string name="left_scroll_item4">Thessaloniki Walking Tours</string>
    <string name="left_scroll_item5">About</string>
    <string name="title_activity_language">Language</string>
    <string name="title_activity_about">About</string>
    <string name="stay_tuned">More events are coming soon! "\n" Stay tuned</string>
    <string name="title_activity_show_me_awalk">ShowMeAWalk</string>
    <string name="station">Station</string>
    <string name="title_activity_thessaloniki_walking_tours">Thessaloniki Walking Tours</string>
    <string name="choose_lang">Choose Language</string>
    <string name="ok">OK</string>
    <string name="en">English</string>
    <string name="gr">Ελληνικά</string>
    <string name="show_route">Show the route</string>
    <string name="no_route">There is no route</string>
    <string name="end_route">This was the route</string>
    <string name="no_app">This application does not exist.</string>
    <string name="text_about">The application has been designed by student Kyriaki Paniskaki
        for her thesis, under the supervision of professor Athina Vakali.
        "\n" "\n" "\n" Informatics School "\n""\n" Aristotle University of Thessaloniki
        "\n""\n" Research group Oswinds "\n""\n" &#169;2015 Oswinds "\n" kiki_paniskaki@hotmail.com
    </string>
    <string name="title_activity_register">Register</string>
    <string name="resister_text">Register in order to receive messages and to be able to update the database.
        Also, you will be able to enshrine participation for a walk. Requires internet connection.
    </string>
    <string name="mail">E-mail</string>
    <string name="title_activity_greeting">Welcome</string>
    <string name="title_activity_message">Message</string>
    <string name="welcome_text">Welcome in Thessaloniki Walking Tours App. Now you will receive messages from server,
        you will be able to refresh the content of walks and also to enshrine participation for a walk.</string>
    <string name="register_as">You have register as </string>
    <string name="member1">Evi Karkiti</string>
    <string name="member2">Kostis Zafirakis</string>
    <string name="member3">George Featham</string>
    <string name="member4">Tasos Papadopoulos</string>
    <string name="member5">Alkistis Charsouli</string>
    <string name="member6">Mada Dimaki</string>
    <string name="title_activity_csdescription_of_awalk">Description</string>
    <string name="info_member1">Journalist and team manager. She organizes walking tours and she is responsible for the
        company’s communication and public relations. She never misses the opportunity to take photographic snapshots during
        the walking tours.</string>
    <string name="info_member2">Journalist, radio and television producer with vast experience in the TV reportage and a real
        taste aficionado, he keeps wandering in the markets offering an unforgettable gastronomic experience.</string>
    <string name="info_member3">Archaeologist, art historian, a PhD student and a licensed tour guide, with a subversive attitude
        and an endless humour. He is a real storyteller and he has a deep knowledge of the city’s history, a history that will lead
        you to the most unexpected places.</string>
    <string name="info_member4">Archaeologist, a PhD student of Byzantine archaeology and a licensed tour guide. He is both a
        magnificent narrator and an inquiring mind and he has a really unique way of approaching not only city’s history but also
        city’s stories and urban legends.</string>
    <string name="info_member5">Archaeologist and a theatre aficionado, she designed a very agreeable evening walking tour full
        of theatre stories, secret love stories and urban legends that come right from the Belle Epoque era in Thessaloniki.</string>
    <string name="info_member6">Journalist and professor, in charge of promotion issues. Being also fully capable to understand the
        students’ needs and combine the informal learning with fun, she is a valuable advisor to the educational program of the
        company.</string>
    <string name="thessaloniki_walking_tour_team_text">The team of Thessaloniki Walking Tour consist of</string>
    <string name="up_date">Up to date </string>
    <string name="start_update">Update starts</string>
    <string name="go_to_register">You should register first. Go to account screen in order to register.</string>
    <string name="menu_button">Click</string>
    <string name="app_title">Thessaloniki Walking Tours</string>
    <string name="new_message">New message</string>
    <string name="hint_mail">someone@gmail.com</string>
    <string name="title_activity_refresh_database">RefreshDatabase</string>
    <string name="refresh_activity_text">Pressing the below refresh button, you can refresh the content
      if there are new entries. Requires internet connection.</string>
    <string name="user_exists">This user already exists</string>
    <string name="walk_time_message">The walk starts at</string>
    <string name="time_remaining">Walk starts at</string>
    <string name="walk_starts">Walk starts now</string>
    <string name="title_activity_this_walk">ThisWalk</string>
    <string name="no_participation">You haven\'t participate in anyone walk.</string>
    <string name="joined_walks">Here are appeared the walks in which you have participated.</string>
    <string name="question_join">I will go</string>
    <string name="join_in">You have signed in.</string>
    <string name="no_join_in">You haven\'t signed in.</string>
    <string name="message">Message</string>
    <string name="joinIn_message">You can register in walk by pressing the button
     that you will find at the end of screen. Requires internet connection.</string>
    <string name="stars">stars</string>
    <string name="internet_connection">There isn\'t internet access. Enable the internet
      connection in order to load the map.</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="splash_text1">Thessaloniki Walking Tours</string>
    <string name="splash_text2">TWT</string>
    <string name="splash_text3">Travel Differently</string>
    <string name="participation_ok">Participation enshrined</string>
    <string name="internet_connection_participation">There isn\'t internet access. Enable the internet
      connection in order to enshrine the participation.</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_error">Please enter valid email and check again the password.</string>
    <string name="title_activity_register_gcm">Register</string>
    <string name="text_email_validation">An email has sent to the e-mail address. Please confirm the e-mail
        address in order to proceed with the registration. You have 8 hours in order to confirm the e-mail address.
        When you confirm the e-mail address click the button below in order to continue.
    </string>
    <string name="no_email_validation">You haven\'t validate the e-mail address. Please check you mailbox.</string>
    <string name="title_activity_log_in">LogIn</string>
    <string name="log_in_button">Log In</string>
    <string name="login_fail">Login failed because your username or password was entered incorrectly. Try again</string>
    <string name="title_activity_account">Account</string>
    <string name="account_text">Get an account in order to receive messages from server, to refresh the content of walks
        and also you will be able to enshrine participation for a walk. You can create a new account by pressing the
        register button or you can log in if you already have an account, by pressing the log in button.
        Requires internet connection.</string>
    <string name="register_button">Register</string>
    <string name="empty_login">Please fill all the fields.</string>
    <string name="no_internet">Requires internet connection. Please enable Wifi or 3G.</string>
    <string name="transfer">Transferring data from remote database and syncing SQLite. Please wait &#8230;</string>
    <string name="try_again">Try again</string>
    <string name="gone_internet">Unexpected Error occurred!
        Most common Error: Device might not be connected to Internet</string>
    <string name="please_wait">Please wait &#8230;</string>
    <string name="try_again_text">If you haven\'t receive the e-mail or if it has passed 8 hours
         click the below button in order to try again.
    </string>

</resources>
