<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <!-- e-mail -->
        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/mail"
            android:textSize="@dimen/text_size" />

        <!-- edit text -->
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail"
            android:hint="@string/hint_mail" />

        <!-- password -->
        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_text"
            android:layout_marginTop="50dp"
            android:text="@string/password"
            android:textSize="@dimen/text_size" />

        <!-- password field -->
        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:inputType="textPassword" />


        <!-- Log in button -->
        <Button
            android:id="@+id/log_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_field"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/log_in_button"/>


    </RelativeLayout>
</ScrollView>



