<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <!-- register text -->
        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:gravity="center"
            android:text="@string/resister_text"
            android:textColor="@color/bright_green"
            android:textSize="@dimen/text_size" />

        <!-- e-mail -->
        <TextView
            android:id="@+id/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register_text"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:text="@string/mail"
            android:textColor="@color/bright_green"
            android:textSize="@dimen/text_size" />

        <!-- edit text -->
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mail"
            android:hint="@string/hint_mail" />

        <!-- password -->
        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/edit_text"
            android:layout_marginTop="50dp"
            android:text="@string/password"
            android:textColor="@color/bright_green"
            android:textSize="@dimen/text_size" />

        <!-- password field -->
        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:inputType="textPassword" />

        <!-- confirm password -->
        <TextView
            android:id="@+id/confirm_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/password_field"
            android:layout_marginTop="50dp"
            android:text="@string/confirm_password"
            android:textColor="@color/bright_green"
            android:textSize="@dimen/text_size" />

        <!-- password field -->
        <EditText
            android:id="@+id/confirm_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password"
            android:inputType="textPassword" />


        <!--ok Button -->
        <Button
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/confirm_password_field"
            android:layout_marginTop="50dp"
            android:textColor="@color/bright_green"
            android:onClick="RegisterEmail"
            android:text="@string/ok" />

    </RelativeLayout>

</ScrollView>