<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/bright_green"
    tools:context="kiki__000.walkingstoursapp.SplashScreen">

    <!--splash text1 -->
    <TextView
        android:id="@+id/splash_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/splash_text1"
        android:textSize="20sp"
        android:textColor="@color/white"/>

    <!--splash text2-->
    <TextView
        android:id="@+id/splash_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/splash_text2"
        android:textSize="40sp"
        android:textColor="@color/white"/>


    <TextView
        android:id="@+id/splash_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/splash_text2"
        android:layout_marginTop="40dp"
        android:text="@string/splash_text3"
        android:textSize="25sp"
        android:textColor="@color/white"/>

</RelativeLayout>
