<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <!-- message text -->
        <TextView
            android:id="@+id/account_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textColor="@color/bright_green"
            android:text="@string/account_text"
            android:textSize="15sp"/>

        <!-- logIn button -->
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_text"
            android:layout_toLeftOf="@+id/centerPoint"
            android:layout_toStartOf="@+id/centerPoint"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/log_in_button"
            android:textColor="@color/bright_green"/>

        <TextView
            android:id="@+id/centerPoint"
            android:text=""
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />


        <!-- Register button -->
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/account_text"
            android:layout_toRightOf="@+id/centerPoint"
            android:layout_toEndOf="@+id/centerPoint"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/register_button"
            android:textColor="@color/bright_green"/>

    </RelativeLayout>
</ScrollView>